# cv_matcher

./: .gitignore  .python-version  README.md  plan.md  pyproject.toml
config/: params.py
docker/: Dockerfile
notebooks/: data_transfo.ipynb  resume.ipynb
src/: db_connector.py  pipeline.py
src/etl/: api_connector.py  data_transformer.py  pipeline.py
src/matcher/: matcher.py
src/parse_resume/: chatgpt.py  data_transformer.py  db_connector.py  nlp.py  pdf_parser.py  pipeline.py
