[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = ["kelly anne <kdanne206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pymongo = "^4.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
